# ConnTact

./: .gitignore  CMakeLists.txt  ReadMe.md  dependencies.rosinstall  dependencies.rosinstall_vcs_export  package.xml  setup.py
config/: basic_config_example.rviz  connfig_peg_10mm.yaml  conntact_config.yaml  conntact_params.yaml  peg_in_hole_params.yaml  ur10e_controllers.yaml
conntact/: CMakeLists.txt  License.md  ReadMe.md  package.xml
conntact/src/conntact/: assembly_utils.py  conntact_interface.py  conntask.py  conntext.py  ros_conntact_interface.py  unit_tests.py
launch/: .ur10e_upload_compliance.launch.swp  conntact_demo.launch  peg_in_hole_demo.launch  ur10e_upload.launch  ur10e_upload_compliance.launch
nodes/: corner_search_node  demo_assembly_application_compliance_control  plotting_node  spiral_search_node  static_force_node
spiral_search_example/: CMakeLists.txt  package.xml  setup.py
spiral_search_example/config/: basic_config_example.rviz  connfig_peg_10mm.yaml  conntact_params.yaml  my_robot_calibration.yaml  peg_in_hole_params.yaml  ur10e_controllers.yaml
spiral_search_example/launch/: conntact_demo.launch
spiral_search_example/meshes/: GMC_Laser_Plate_Virtual.STL
spiral_search_example/nodes/: corner_search_node  plotting_node  spiral_search_node
spiral_search_example/src/spiral_search_example/: assembly_plotting.py  corner_search.py  demo_assembly_application.py  spiral_search.py
spiral_search_example/urdf/: assembly_table.xacro  laser_cut_base_plate.xacro  robotiq_gripper.xacro  workcell.urdf.xacro
src/: demo_assembly_application_compliance_control.py  gripper.py  scratch.py
src/conntact/: assembly_algorithm_blocks.py  (+13 more)
urdf/: assembly_table.xacro  laser_cut_base_plate.xacro  robotiq_gripper.xacro  workcell.urdf.xacro
(+10 files in other folders)
