<?xml version="1.0"?>
<package format="2">
  <name>conntact</name>
  <version>0.1.0</version>
  <description>Conntact</description>

  <maintainer email="john.bonnin@swri.org">John Bonnin</maintainer>
  <maintainer email="kevin.warburton@swri.org">Kevin Warburton</maintainer>
  <maintainer email="josh.langsfeld@swri.org">Josh Langsfeld</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>ur_description</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
