<?xml version="1.0"?>
<package format="2">
  <name>spiral_search_example</name>
  <version>0.1.0</version>
  <description>Example conntask: spiral search example application.</description>

  <maintainer email="john.bonnin@swri.org">John Bonnin</maintainer>
  <maintainer email="lcbw@swri.org">Lily Baye-Wallace</maintainer>
  <maintainer email="josh.langsfeld@swri.org">Josh Langsfeld</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>ur_description</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
